v1.250.0: the bundled-JDK decision, measured — the JDK 25 + FX 26 dossier (#379)
- docs/engineering/jdk25-fx26-dossier.md: JDK 25 LTS + FX 26 probed
  live — jlink green, app boots with zero SEVERE (the --add-opens
  set holds), Browser renders on FX 26's WebKit, the v1.226.0 h2c
  flag survives; honest GO-remainder listed
- Ledger 74 amended to point at the dossier; docs only

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>